@@ -65,17 +65,13 @@ namespace WoopsiUI {
 		 * Get the bitmap's width.
 		 * @return The bitmap's width.
 		 */
-		inline const u16 getWidth() const { return _width; };
+		virtual const u16 getWidth() const = 0;
 
 		/**
 		 * Get the bitmap's height.
 		 * @return The bitmap's height.
 		 */
-		inline const u16 getHeight() const { return _height; };
-
-	protected:
-		u16 _width;										/**< Width of the bitmap */
-		u16 _height;									/**< Height of the bitmap */
+		virtual const u16 getHeight() const = 0;
 	};
 }
 
